# icedrustplay

./: Cargo.toml  Dockerfile  README.md  dockerrun.sh  run.sh  vuewindow.html
process_handler/: Cargo.toml
process_handler/src/: main.rs  rungui.sh  runwebview.sh
src/: .main.rs.swp  main.rs  test.sh
src/utility/src/: primary.rs
wasm-lib/: index.html
webview/: Cargo.toml
webview/src/: main.rs
